--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "EnvExpInd"]
+	path = EnvExpInd
+	url = https://github.com/spatial-r/envexpind
+	shallow = true
+	registered = true
